# fflib2

./: CMakeLists.txt
libfabric/test/: CMakeLists.txt
src/: ffbind.h  ffcomp.h  ffinternal.h  ffop.c
src/bindings/: libfabric_binding.c
src/components/gcomp/: ffop_gcomp.c
src/components/libfabric/: connect_libfabric.cpp  ctx.h  fflibfabric.c  ffop_libfabric_recv.c  ffop_libfabric_send.c  libfabric_impl.h
test/: CMakeLists.txt  allreduce.c  allreduce_libfabric.c  hpx_fflib_1.cpp  send_recv_libfabric.c
